fix(components): fix for customized type and spacing

--- a/packages/components/src/components/accordion/_accordion.scss
+++ b/packages/components/src/components/accordion/_accordion.scss
@@ -40,7 +40,7 @@
     align-items: flex-start;
     justify-content: $accordion-justify-content;
     cursor: pointer;
-    padding: rem(6px) 0;
+    padding: #{$spacing-02 + $spacing-03 / 2} 0;
     flex-direction: $accordion-flex-direction;
     position: relative;
     width: 100%;
@@ -72,11 +72,6 @@
 
   .#{$prefix}--accordion__arrow {
     @include focus-outline('reset');
-    // Without flex basis and flex shrink being set here, our icon width can go
-    // <16px and cause the icon to render in the incorrect artboard size
-    flex: 0 0 1rem;
-    width: 1rem;
-    height: 1rem;
     margin: $accordion-arrow-margin;
     fill: $ui-05;
     // TODO: RTL rotate(180deg);
